Optymalizacja operacji z bazą danych. Teraz jest używany wspólny EMFProvider